nav and hero section done

--- a/Frontend/assets/style.css
+++ b/Frontend/assets/style.css
@@ -1,13 +1,10 @@
 
 .colorOne{
-    color: #F1BA88;
+    color: #A2AADB;
 }
 .colortwo{
     color: #E9F5BE;
 }
-.colorThree{
-    color: #81E7AF;
-}
 .colorFour{
-    color: #03A791;
+    color: #088e7c;
 }
